# mustore

./: .gitignore  .ignore  API.md  Cargo.toml  Discussions.md  Dockerfile  README.md  docker-compose-local.yaml
config/: local-compose.yaml  local.yaml  nginx-compose.conf  prod.yaml
db/: schema.dbml
diagrams/: design_sketch.excalidraw  project_scheme.excalidraw
doc/: book.toml
doc/src/: README.md  SUMMARY.md  backend-tasks.md  discussions.md  frontend-tasks.md  redis_schema.md  stuff.md  updates.md
frontend/main_app/: index.html  package-lock.json  package.json  upload  vite.config.ts
frontend/main_app/src/: App.tsx  GeneralStyles.scss  colors.scss  config.ts  index.scss  loaders.scss  main.tsx
frontend/main_app/src/Components/: EmailConfirmation.module.scss  EmailConfirmation.tsx  ErrorWindow.module.scss  ErrorWindow.tsx  Footer.module.scss  Footer.tsx  LoadingScreen.module.scss  LoadingScreen.tsx  LogIn.module.scss  LogIn.tsx  SignUp.module.scss  SignUp.tsx
frontend/main_app/src/Components/UI/: EmailConfirmation.module.scss  EmailConfirmation.tsx  ErrorWindow.module.scss  ErrorWindow.tsx  ToolbarPopUpMenu.module.scss  ToolbarPopUpMenu.tsx  UserToolbar.module.scss  UserToolbar.tsx  UserToolbarMobile.module.scss  UserToolbarMobile.tsx
frontend/main_app/src/Menu/: Menu.module.scss  Menu.tsx
frontend/main_app/src/Pages/: Footer.module.scss  Footer.tsx  Home.tsx
frontend/main_app/src/Pages/Home/: HomePage.tsx
frontend/main_app/src/Pages/Home/Components/: AuthorsReviews.module.scss  AuthorsReviews.tsx  Hero.module.scss  Hero.tsx  JoinUs.module.scss  JoinUs.tsx  Products.module.scss  Products.tsx  Services.module.scss  Services.tsx  WhyUs.module.scss  WhyUs.tsx
frontend/main_app/src/Pages/Products/: ProductsPage.tsx  music_keys.ts
frontend/main_app/src/Pages/Products/Components/: ContentSection.module.scss  ContentSection.tsx  MainContentProducts.module.scss  MainContentProducts.tsx  ProductsSidebarComponent.module.scss  ProductsSidebarComponent.tsx  ProductsSidebarContainer.tsx
frontend/main_app/src/PersonalAccount/: PersonalAccount.module.scss  PersonalAccount.tsx
frontend/main_app/src/PersonalAccount/Components/: GeneralStyles.scss  MainContent.tsx  Sidebar.module.scss  Sidebar.tsx  TopBar.module.scss  TopBar.tsx
frontend/main_app/src/PersonalAccount/Components/AccountProducts/: ProductDefault.module.scss  ProductDefault.tsx  UploadNewProduct.module.scss  UploadNewProduct.tsx  UploadProductTempl.module.scss  UploadProductTempl.tsx
frontend/main_app/src/PersonalAccount/Components/UI/: GeneralStyles.scss  MetaInfoWidget.tsx  MetainfoWidget.module.scss
frontend/main_app/src/PersonalAccount/Components/UI_AccountProducts/: ProductCoversContainer.module.scss  ProductCoversContainer.tsx  ProductDefault.tsx  ProductMeta.module.scss  ProductMeta.tsx  ProductSection.module.scss  ProductSection.tsx  (+1 more)
frontend/main_app/src/PersonalAccount/Pages/: AccountProducts.module.scss  AccountProducts.tsx  Dashboard.module.scss  Dashboard.tsx  mock_products.tsx
frontend/main_app/src/UI/: AnimatedCounter.module.scss  AnimatedCounter.tsx  AudioWavesIcon.tsx  Filler.module.scss  Filler.tsx
frontend/main_app/src/assets/svg/: BeatMaking.tsx  CheckMark.tsx  CoverDesign.tsx  Ghostwriting.tsx  Logo.tsx  Mixing.tsx  Songwriting.tsx
frontend/main_app/src/helpers/: helpers.ts
frontend/main_app/src/hooks/: useCheckUsernameExistence.tsx  useCheckUsernameExistenceApi.tsx  useCheckboxState.tsx  useGenresMoodsApi.tsx  useLogInUserApi.tsx  usePageNavigation.tsx  useSignUpUserApi.tsx
frontend/main_app/src/hooks/API/: useCheckPermissionsApi.tsx  useCheckUsernameExistenceApi.tsx  useGenresMoodsApi.tsx  useLogInUserApi.tsx  useLogOutUserApi.tsx  useSignUpUserApi.tsx  useUsernameAvatarApi.tsx
frontend/main_app/src/layouts/: MainLayout.tsx
frontend/main_app/src/state/: active_section_slice.ts  active_tab_account_creator_slice.ts  previous_path_slice.ts  product_status_slice.ts  sidebar_actions_slice.ts  sidebar_collapsed_slice.ts  store.ts  user_permissions_slice.ts  username_avatar_slice.ts
frontend/main_app/src/types/: types.ts
migrations/: V1__init_migration.sql  V2__add_available_songs_materialized_view.sql  V2__add_materialized_views.sql  V3__fill_genres_moods.sql  V4__card_tokens.sql
queries/: consumer_access.sql  creator_access.sql  internal.sql  open_access.sql  tests.sql  user_access.sql  user_auth_queries.sql
scripts/: cleanup_after_tests  run_garage  run_minio  run_pg  run_redis  run_schemaspy
src/: config.rs  cornucopia.rs  email_client.rs  html_template_gen.rs  lib.rs  main.rs
src/auth/: admins.rs  confirm_account.rs  login.rs  middleware.rs  mod.rs  signup.rs  user_confirm_acc.rs  user_confirm_account.rs  user_login.rs  user_signup.rs  users.rs
src/domain/: general_types.rs  mod.rs  music_parameters.rs  object_key.rs  queries.rs  requests.rs  signup_token.rs  upload_request.rs  user_candidate.rs  user_email.rs  user_name.rs  user_password.rs  user_role.rs
src/domain/requests/: consumer_access.rs  creator_access.rs  mod.rs  open_access.rs  user_access.rs
src/domain/responses/: user_access.rs
src/domain/sessions/: card_token_registration.rs  mod.rs
src/examples/: mod.rs
src/middleware/: mod.rs
src/payments/: card_token.rs  kopeck.rs  mod.rs  payment.rs
src/routes/: development.rs  health_check.rs  mod.rs  notification_center.rs  notifications.rs  protected.rs
src/routes/open/: mod.rs
src/routes/private/: mod.rs
src/routes/protected/: admin.rs  consumer.rs  creator.rs  minio.rs  mod.rs  user.rs
src/service_providers/: captcha_verifier.rs  mod.rs  object_storage.rs
src/service_providers/object_storage/: mod.rs  presigned_post_form.rs
src/startup/: api_doc.rs  mod.rs  tasks.rs
src/types/: data_size.rs  mod.rs
src/validation/: mod.rs
templates/: email_verification.html
tests/api/: consumer.rs  conversation.rs  creator.rs  health_check.rs  helpers.rs  login.rs  main.rs  signup.rs  submit.rs  upload.rs  upload_song.rs
tests/api/helpers/: banksim.rs  creator.rs  mod.rs  webdriver.rs
tests/generation/: main.rs
(+26 files in other folders)
