[package]
name = "mustore"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database-related dependencies
postgres-types = { version = "0.2.6", features = ["derive"] }
tokio-postgres = { version = "0.7.10", features = [
  "with-uuid-1",
  "with-time-0_3",
] }
deadpool = "0.10.0"
deadpool-postgres = "0.12.1"
refinery = { version = "0.8.11", features = ["tokio-postgres"] }
cornucopia_async = { git = "https://github.com/cornucopia-rs/cornucopia", rev = "d1229ae" }
fred = "7.1.0"

# Web-related dependencies
axum = { version = "0.7.4", features = ["macros", "tracing"] }
axum-extra = { version = "0.9.2", features = ["query"] }
http = "1.0.0"
hyper = "1.1.0"
tokio = { version = "1.35.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
reqwest = { version = "0.11.23", default-features = false, features = [
  "json",
  "rustls-tls",
  "multipart",
  "cookies",
] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
aws-config = "1.1.1"
aws-sdk-s3 = "1.11.0"

# Serialization-related dependencies
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
serde_urlencoded = "0.7.1"

# Utility and miscellaneous dependencies
futures = "0.3.30"
async-trait = "0.1.77"
config = "0.13.4"
uuid = { version = "1.6.1", features = ["v4"] }
garde = { version = "0.17.0", features = ["derive"] }
linkify = "0.10.0"
urlencoding = "2.1.3"
askama = "0.12.1"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.56"
anyhow = "1.0.79"
time = { version = "0.3.31", features = ["local-offset", "macros", "parsing"] }
lazy_static = "1.4.0"
identicon-rs = "4.0.1"
image = "0.24.7"
rust_decimal = { version = "1.33.1", features = ["db-postgres"] }
tokio-cron-scheduler = "0.9.4"
mediatype = { version = "0.19.16", features = ["serde"] }

# Security
axum-login = "0.12.0"
tower-sessions = { version = "0.9.1", features = ["redis-store"] }
base64 = "0.21.5"
sha2 = "0.10.8"
hex = "0.4.3"
hmac = "0.12.1"
argon2 = { version = "0.5.2", features = ["std"] }
secrecy = { version = "0.8.0", features = ["serde"] }
zxcvbn = "2.2.2"

# Telemetry
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "chrono",
  "registry",
  "env-filter",
] }
opentelemetry = "0.21.0"
tracing-opentelemetry = "0.22.0"
opentelemetry-jaeger = "0.20.0"

# Documentation
utoipa = { version = "4.2.0", features = ["axum_extras", "time", "decimal"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

[dev-dependencies]
# Sync version for testing purposes
postgres = "0.19.7"
wiremock = "0.5.22"
fake = "2.9.2"

[profile.dev.package."*"]
opt-level = 3
debug = false
incremental = true

[profile.dev]
opt-level = 0
debug = false
incremental = true
