[package]
name = "mustore"
version = "0.1.0"
edition = "2021"

[dependencies]
# banksim-api = { path = "../../crates/airactions/backends/banksim-api" }
# airactions = { path = "../../crates/airactions/airactions" }
banksim-api = { git = "https://github.com/ghashy/airactions.git" }
airactions = { git = "https://github.com/ghashy/airactions.git" }
# Database-related dependencies
postgres-types = { version = "0.2.6", features = ["derive"] }
tokio-postgres = { version = "0.7.10", features = [
  "with-uuid-1",
  "with-time-0_3",
] }
deadpool = "0.11.0"
deadpool-postgres = "0.13.0"
refinery = { version = "0.8.13", features = ["tokio-postgres"] }
# cornucopia_async = { git = "https://github.com/cornucopia-rs/cornucopia", rev = "d1229ae" }
cornucopia_async = { git = "https://github.com/ghashy/cornucopia", branch = "update_dependencies" }
fred = "8.0.6"

# Web-related dependencies
axum = { version = "0.7.5", features = ["macros", "tracing", "multipart"] }
axum-extra = { version = "0.9.3", features = ["query"] }
http = "1.1.0"
hyper = "1.2.0"
tokio = { version = "1.37.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
reqwest = { version = "0.12.2", default-features = false, features = [
  "json",
  "rustls-tls",
  "multipart",
  "cookies",
] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
http-body-util = "0.1.1"
aws-config = "1.1.9"
aws-sdk-s3 = "1.21.0"

# Serialization-related dependencies
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
serde_urlencoded = "0.7.1"

# Utility and miscellaneous dependencies
futures = "0.3.30"
async-trait = "0.1.79"
config = "0.14.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
garde = { version = "0.18.0", features = ["derive", "email"] }
linkify = "0.10.0"
urlencoding = "2.1.3"
askama = "0.12.1"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.58"
anyhow = "1.0.81"
time = { version = "0.3.34", features = ["local-offset", "macros", "parsing"] }
lazy_static = "1.4.0"
identicon-rs = "5.0.0"
image = "0.24.8" # identicon support ^0.24
rust_decimal = { version = "1.35.0", features = ["db-postgres"] }
tokio-cron-scheduler = "0.10.0"
mediatype = { version = "0.19.18", features = ["serde"] }

# Security
axum-login = "0.15.1"
tower-sessions = "0.12.2"
tower-sessions-redis-store = "0.12.0"
base64 = "0.22.0"
sha2 = "0.10.8"
hex = "0.4.3"
hmac = "0.12.1"
argon2 = { version = "0.5.3", features = ["std"] }
secrecy = { version = "0.8.0", features = ["serde"] }
zxcvbn = "2.2.2"

# Telemetry
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "chrono",
  "registry",
  "env-filter",
] }
opentelemetry = "0.21.0"
tracing-opentelemetry = "0.22.0"
opentelemetry-jaeger = "0.20.0"

# Documentation
utoipa = { version = "4.2.0", features = ["axum_extras", "time", "decimal", "uuid"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

[dev-dependencies]
wiremock = "0.6.0"
fake = "2.9.2"
fantoccini = "0.19.3"

[profile.dev.package."*"]
opt-level = 3
debug = false
incremental = true

[profile.dev]
opt-level = 0
debug = false
incremental = true
